# coral-vision

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  TECHNICAL_REVIEW.md  TESTING.md  docker-compose.yml  generate-local-ssl.sh  init-db.sql  openapi.json  pyproject.toml  pytest.ini  setup-docker.sh
coral_vision/: __init__.py  cli.py  config.py
coral_vision/core/: __init__.py  circuit_breaker.py  edgetpu.py  exceptions.py  face_detect.py  face_embed.py  file_validation.py  image_io.py  logger.py  model_cache.py  pipeline_manager.py  recognition.py  storage_pgvector.py  tflite.py  tts.py  types.py  validation.py  video_capture.py  video_render.py
coral_vision/pipelines/: __init__.py  enroll.py  recognize.py  video_recognize.py
coral_vision/web/: __init__.py  api.py  app.py  response_utils.py
coral_vision/web/static/css/: styles.css
coral_vision/web/static/js/: app.js  error-handler.js  logger.js
coral_vision/web/templates/: docs.html  index.html
examples/: api_examples.md
tests/: conftest.py  test_api.py  test_core.py  test_docker_integration.py
